--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "prom-client": "^15.1.3",
     "react-router-dom": "^7.9.6",
     "redis": "^5.10.0",
